--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                         <li class="navigation__link"><a href="#">Hot</a></li>
                         <li class="navigation__link"><a href="#">Subscriptions</a></li>
                 </ul>
-                <div class="input__menu">
-                    <input type="text" class="input__text" placeholder="Write text">
+                <form class="input__menu">
+                    <input type="text" class="input__text" placeholder="Write text" required>
                     <button class="input__btn"></button>
-                </div>
+                </form>
             </div>
         </header>
         <!--=========MAIN========-->
@@ -65,28 +65,28 @@
                                     clarifying the appropriate conditions for activation.</span>
                             </div>
                             <ul class="hashtag">
-                                <li class="hashtag__link">#fresh</li>
-                                <li class="hashtag__link">#hot</li>
-                                <li class="hashtag__link">#my</li>
-                                <li class="hashtag__link">#randomness</li>
+                                <li class="hashtag__link"><a href="#">#fresh</a></li>
+                                <li class="hashtag__link"><a href="#">#hot</a></li>
+                                <li class="hashtag__link"><a href="#">#my</a></li>
+                                <li class="hashtag__link"><a href="#">#randomness</a></li>
                             </ul>
                         </div>
                         <div class="post--footer">
                             <div class="footer--functional">
                                 <div class="functional__link">
-                                    <div class="functional__img functional__img--like"></div>
+                                    <button class="functional__img functional__img--like"></button>
 
                                 </div>
                                 <div class="functional__link">
-                                    <div class="functional__img functional__img--comment"></div>
+                                    <button class="functional__img functional__img--comment"></button>
 
                                 </div>
-                                <div class="functional__link functional__img--save">
-                                    <div class="functional__img"></div>
+                                <div class="functional__link">
+                                    <button class="functional__img functional__img--save"></button>
 
                                 </div>
-                                <div class="functional__link functional__img--send">
-                                    <div class="functional__img"></div>
+                                <div class="functional__link">
+                                    <button class="functional__img functional__img--send"></button>
                                 </div>
                             </div>
 
@@ -95,7 +95,7 @@
                                     <span class="author--name">arteislamov</span>
                                     <span class="author--activity">5 minutes ago</span>
                                 </div>
-                                <div class="author--icon"></div>
+                                <a href="#" class="author--icon"></a>
                             </div>
                         </div>
                     </div>
@@ -135,28 +135,28 @@
                                     clarifying the appropriate conditions for activation.</span>
                             </div>
                             <ul class="hashtag">
-                                <li class="hashtag__link">#fresh</li>
-                                <li class="hashtag__link">#hot</li>
-                                <li class="hashtag__link">#my</li>
-                                <li class="hashtag__link">#randomness</li>
+                                <li class="hashtag__link"><a href="#">#fresh</a></li>
+                                <li class="hashtag__link"><a href="#">#hot</a></li>
+                                <li class="hashtag__link"><a href="#">#my</a></li>
+                                <li class="hashtag__link"><a href="#">#randomness</a></li>
                             </ul>
                         </div>
                         <div class="post--footer">
                             <div class="footer--functional">
                                 <div class="functional__link">
-                                    <div class="functional__img functional__img--like"></div>
+                                    <button class="functional__img functional__img--like"></button>
 
                                 </div>
                                 <div class="functional__link">
-                                    <div class="functional__img functional__img--comment"></div>
+                                    <button class="functional__img functional__img--comment"></button>
 
                                 </div>
-                                <div class="functional__link functional__img--save">
-                                    <div class="functional__img"></div>
+                                <div class="functional__link">
+                                    <button class="functional__img functional__img--save"></button>
 
                                 </div>
-                                <div class="functional__link functional__img--send">
-                                    <div class="functional__img"></div>
+                                <div class="functional__link">
+                                    <button class="functional__img functional__img--send"></button>
                                 </div>
                             </div>
 
@@ -165,7 +165,7 @@
                                     <span class="author--name">arteislamov</span>
                                     <span class="author--activity">5 minutes ago</span>
                                 </div>
-                                <div class="author--icon"></div>
+                                <a href="#" class="author--icon"></a>
                             </div>
                         </div>
                     </div>
