add: interim aside :) no finish!

--- a/index.html
+++ b/index.html
@@ -170,12 +170,40 @@
                         </div>
                     </div>
                 </div>
-                <div class="aside">
-                    <div class="profile"></div>
-                    <button></button>
-                    <div class="comment"></div>
-                    <div class="market"></div>
-                </div>
+            <!--============ASIDE=========-->
+                <aside>
+                    <div class="aside-wrapper">
+                        <div class="aside__profile">
+                            <div class="profile__header">
+                                <button class="profile__avatar"></button>
+                                <span class="profile__name">nikfiery</span>
+                                <button class="profile__exit"></button>
+                            </div>
+                            <ul class="profile__functional">
+                                <li class="profile__navigation"><button>Answers</button></li>
+                                <li class="profile__navigation"><button>Comments</button></li>
+                                <li class="profile__navigation"><button>Estimations</button></li>
+                                <li class="profile__navigation"><button>Conserved</button></li>
+                                <li class="profile__navigation"><button>Subscriptions</button></li>
+                                <li class="profile__navigation"><button>Notes</button></li>
+                                <li class="profile__navigation"><button>Ban</button></li>
+                            </ul>
+                        </div>
+                        <button class="aside__btn">Publish a post</button>
+                        <div class="aside__comment">
+                            <h2 class="comment__day">Comment of the day</h2>
+                            <div class="comment__content">
+                                <h2 class="comment__title">How to cheat an ATM if you want to withdraw more cash</h2>
+                                <span class="comment__text">Thus, strengthening and developing the structure requires us to
+                                    analyze the forms of development. However, we should not forget that the implementation
+                                    of the planned tasks requires us to analyze the positions taken by the participants in
+                                    relation to the tasks set. The task of the organization, especially
+                                    consultation...</span>
+                            </div>
+                        </div>
+                        <img src="./img/adc.svg" alt="img-ads" class="aside__ads">
+                    </div>
+                </aside>
             </div>
         </main>
     </div>
