Fix: add btn publ post

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                 <li class="profile__navigation"><button>Ban</button></li>
                             </ul>
                         </div>
-                        <button class="aside__btn">Publish a post</button>
+                        <div class="aside__btn"><button class="aside__btn--push">Publish a post</button></div>
                         <div class="aside__comment">
                             <h2 class="comment__day">Comment of the day</h2>
                             <div class="comment__content">
