made changes to navigation

--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
                                 <button class="profile__exit"></button>
                             </div>
                             <ul class="profile__functional">
-                                <li class="profile__navigation"><button>Answers</button></li>
-                                <li class="profile__navigation"><button>Comments</button></li>
-                                <li class="profile__navigation"><button>Estimations</button></li>
-                                <li class="profile__navigation"><button>Conserved</button></li>
-                                <li class="profile__navigation"><button>Subscriptions</button></li>
-                                <li class="profile__navigation"><button>Notes</button></li>
-                                <li class="profile__navigation"><button>Ban</button></li>
+                                <li class="profile__navigation"><button class="marker__answers">Answers</button></li>
+                                <li class="profile__navigation"><button class="marker__comments">Comments</button></li>
+                                <li class="profile__navigation"><button class="marker__estimations">Estimations</button></li>
+                                <li class="profile__navigation"><button class="marker__conserved">Conserved</button></li>
+                                <li class="profile__navigation"><button class="marker__subscriptions">Subscriptions</button></li>
+                                <li class="profile__navigation"><button class="marker__notes">Notes</button></li>
+                                <li class="profile__navigation"><button class="marker__ban">Ban</button></li>
                             </ul>
                         </div>
                         <div class="aside__btn"><button class="aside__btn--push">Publish a post</button></div>
