add adaptive max-width: 610px

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                     <input type="text" class="input__text" placeholder="Write text" required>
                     <button class="input__btn"></button>
                 </form>
+                <div class="burger">
+                    <div class="burger__top"></div>
+                    <div class="burger__center"></div>
+                    <div class="burger__bottom"></div>
+                </div>
             </div>
         </header>
         <!--=========MAIN========-->
